aggiunge logo e prime immagini

--- a/index.html
+++ b/index.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Booleaner MP</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+
+    <!--inizio logo-->
+    <header>
+        <img id="logo" src="img/logo.svg" alt="logo booleaner">
+    </header>
+    <!--fine logo-->
+
+    <!--inizio contenuto generico-->
+    <main>
+        <!--inizio titolo e info-->
+        <h1>Internet deve essere al servizio del bene pubblico, il manifesto di Tim Berners-Lee</h1>
+        <div>Scritto da <span>The Booleaner</span></div>
+        <div>il 10/10/2020</div>
+        <!--inizio titolo e info-->
+        <img src="img/tim-1.jpg" alt="tim1">
+        <img src="img/tim-2.jpg" alt="tim2">
+
+     
+    </main>
+    <!--fine contenuto generico-->
+
+    <!--inizio potrebbe interessare-->
+    <footer>
+
+    </footer>
+    <!--fine potrebbe interessare-->
+
 </body>
 </html>
