aggiorna file html

--- a/index.html
+++ b/index.html
@@ -18,18 +18,66 @@
     <main>
         <!--inizio titolo e info-->
         <h1>Internet deve essere al servizio del bene pubblico, il manifesto di Tim Berners-Lee</h1>
-        <div>Scritto da <span>The Booleaner</span></div>
+        <h3>Scritto da <span>The Booleaner</span></h3>
         <div>il 10/10/2020</div>
         <!--inizio titolo e info-->
+
+        <!--inizio foto e descrizioni-->
         <img src="img/tim-1.jpg" alt="tim1">
         <img src="img/tim-2.jpg" alt="tim2">
+        <div class="descrizione">1°foto:descrizione prima foto</div>
+        <div class="descrizione">2°foto:descrizione seconda foto</div>
+        <!--inizio foto e descrizioni-->
 
-     
+        <!--inizio articolo e unordered list-->
+        <article>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo vel eaque ducimus error, tempora veritatis nobis possimus? Qui, beatae ipsa possimus quis<strong> alias commodi amet modi molestiae est doloremque facilis. Lorem, ipsum dolor sit amet consectetur adipisicing elit.</strong> Quidem illo aliquid laudantium facere commodi quasi accusantium nostrum molestiae beatae exercitationem vero officiis alias doloremque laboriosam, architecto hic dicta labore quod.Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ullam similique atque cupiditate vero optio dolorum quidem corrupti dignissimos vel facere quo, autem iure. Nisi pariatur perspiciatis impedit similique laudantium.</article>
+        <ul>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati odio molestias earum laudantium quo illum velit nihil. Iusto distinctio praesentium at ullam aut unde, nihil quibusdam doloribus recusandae autem.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati odio molestias earum laudantium quo illum velit nihil. Iusto distinctio praesentium at ullam aut unde, nihil quibusdam doloribus recusandae autem.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati odio molestias earum laudantium quo illum velit nihil. Iusto distinctio praesentium at ullam aut unde, nihil quibusdam doloribus recusandae autem.</li>
+        </ul>
+        <!--fine articolo e unordered list-->
+
+        <!--inizio tabella-->
+        <table>
+            <thead>
+                <tr>
+                    <th>lorem ipsum dolor</th>
+                    <th>lorem ipsum dolor</th>
+                    <th>lorem ipsum dolor</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>lorem ipsum dolor</td>
+                    <td>lorem ipsum dolor</td>
+                    <td>lorem ipsum dolor</td>
+                </tr>
+                <tr>
+                    <td>lorem ipsum dolor</td>
+                    <td>lorem ipsum dolor</td>
+                    <td>lorem ipsum dolor</td>
+                </tr>
+                <tr>
+                    <td>lorem ipsum dolor</td>
+                    <td>lorem ipsum dolor</td>
+                    <td>lorem ipsum dolor</td>
+                </tr>
+            </tbody>
+        </table>
+        <!--fine tabella-->
+
+        <article>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo vel eaque ducimus error, tempora veritatis nobis possimus? Qui, beatae ipsa possimus quis alias commodi amet modi molestiae est doloremque facilis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. <strong> illo aliquid laudantium facere commodi quasi accusantium nostrum molestiae beatae exercitationem</strong> vero officiis alias doloremque laboriosam, architecto hic dicta labore quod.Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ullam similique atque cupiditate vero optio dolorum quidem corrupti dignissimos vel facere quo, autem iure. Nisi pariatur perspiciatis impedit similique laudantium.</article>
+
     </main>
     <!--fine contenuto generico-->
 
     <!--inizio potrebbe interessare-->
     <footer>
+        <h3>Potrebbero interessarti</h3>
+        <div id="monitor">lorem ipsum dolor</div>
+        <div id="graph">lorem ipsum dolor</div>
+
 
     </footer>
     <!--fine potrebbe interessare-->
