completato file css,aggiunto classe foto al footer

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!--inizio foto e descrizioni-->
 
         <!--inizio articolo e unordered list-->
-        <article>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo vel eaque ducimus error, tempora veritatis nobis possimus? Qui, beatae ipsa possimus quis<strong> alias commodi amet modi molestiae est doloremque facilis. Lorem, ipsum dolor sit amet consectetur adipisicing elit.</strong> Quidem illo aliquid laudantium facere commodi quasi accusantium nostrum molestiae beatae exercitationem vero officiis alias doloremque laboriosam, architecto hic dicta labore quod.Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ullam similique atque cupiditate vero optio dolorum quidem corrupti dignissimos vel facere quo, autem iure. Nisi pariatur perspiciatis impedit similique laudantium.</article>
+        <article>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo vel eaque ducimus error, tempora veritatis nobis possimus? Qui, beatae ipsa possimus quis<em> alias commodi amet modi molestiae est doloremque facilis. Lorem, ipsum dolor sit amet consectetur adipisicing elit.</em> Quidem illo aliquid laudantium facere commodi quasi accusantium nostrum molestiae beatae exercitationem vero officiis alias doloremque laboriosam, architecto hic dicta labore quod.Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ullam similique atque cupiditate vero optio dolorum quidem corrupti dignissimos vel facere quo, autem iure. Nisi pariatur perspiciatis impedit similique laudantium.</article>
         <ul>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati odio molestias earum laudantium quo illum velit nihil. Iusto distinctio praesentium at ullam aut unde, nihil quibusdam doloribus recusandae autem.</li>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati odio molestias earum laudantium quo illum velit nihil. Iusto distinctio praesentium at ullam aut unde, nihil quibusdam doloribus recusandae autem.</li>
@@ -48,7 +48,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
+                <tr class="odd">
                     <td>lorem ipsum dolor</td>
                     <td>lorem ipsum dolor</td>
                     <td>lorem ipsum dolor</td>
@@ -58,7 +58,7 @@
                     <td>lorem ipsum dolor</td>
                     <td>lorem ipsum dolor</td>
                 </tr>
-                <tr>
+                <tr class="odd">
                     <td>lorem ipsum dolor</td>
                     <td>lorem ipsum dolor</td>
                     <td>lorem ipsum dolor</td>
@@ -67,7 +67,7 @@
         </table>
         <!--fine tabella-->
 
-        <article>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo vel eaque ducimus error, tempora veritatis nobis possimus? Qui, beatae ipsa possimus quis alias commodi amet modi molestiae est doloremque facilis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. <strong> illo aliquid laudantium facere commodi quasi accusantium nostrum molestiae beatae exercitationem</strong> vero officiis alias doloremque laboriosam, architecto hic dicta labore quod.Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ullam similique atque cupiditate vero optio dolorum quidem corrupti dignissimos vel facere quo, autem iure. Nisi pariatur perspiciatis impedit similique laudantium.</article>
+        <article>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo vel eaque ducimus error, tempora veritatis nobis possimus? Qui, beatae ipsa possimus quis alias commodi amet modi molestiae est doloremque facilis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. <em> illo aliquid laudantium facere commodi quasi accusantium nostrum molestiae beatae exercitationem</em> vero officiis alias doloremque laboriosam, architecto hic dicta labore quod.Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ullam similique atque cupiditate vero optio dolorum quidem corrupti dignissimos vel facere quo, autem iure. Nisi pariatur perspiciatis impedit similique laudantium.</article>
 
     </main>
     <!--fine contenuto generico-->
@@ -75,8 +75,8 @@
     <!--inizio potrebbe interessare-->
     <footer>
         <h3>Potrebbero interessarti</h3>
-        <div id="monitor">lorem ipsum dolor</div>
-        <div id="graph">lorem ipsum dolor</div>
+        <div class="foto" id="monitor">lorem ipsum dolor</div>
+        <div class="foto" id="graph">lorem ipsum dolor</div>
 
 
     </footer>
