allarga terza colonna nella tabella al 50% width

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <tr>
                     <th>lorem ipsum dolor</th>
                     <th>lorem ipsum dolor</th>
-                    <th>lorem ipsum dolor</th>
+                    <th class="thirdcolumn">lorem ipsum dolor</th>
                 </tr>
             </thead>
             <tbody>
