--- a/index2.html
+++ b/index2.html
@@ -45,7 +45,7 @@
                     <tr>
                         <th>lorem ipsum dolor</th>
                         <th>lorem ipsum dolor</th>
-                        <th>lorem ipsum dolor</th>
+                        <th class="thirdcolumn">lorem ipsum dolor</th>
                     </tr>
                 </thead>
                 <tbody>
